# technical_interview

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/endpoints/: user_group.py  users.py
app/core/: config.py
app/core/exceptions/: user.py
app/core/services/: users.py  users_groups.py  utils.py
app/database/: crud.py  database.py  models.py
app/models/: users.py  users_groups.py
app/repositories/: user_repository.py  users_groups_repository.py
core/: config.py
database/: database.py  models.py
