[project]
name = "technical-interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.0",
    "pyjwt[crypto]>=2.10.1",
    "sqlalchemy>=2.0.40",
]
